--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "devDependencies": {
         "eslint": "^8.50.0",
+        "git-commit-msg-linter": "^5.0.4",
         "husky": "^8.0.3",
         "lint-staged": "^14.0.1"
     }
