--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "git-commit-msg-linter": "^5.0.4",
         "husky": "^8.0.3",
         "lint-staged": "^14.0.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "pg": "^8.11.3"
     }
 }
