--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "postinstall": "npx husky install",
-        "migrations": "node src/db/postgres/migrations/exec.js"
+        "migrations": "node src/db/postgres/migrations/exec.js",
+        "start:dev": "node --watch index.js"
     },
     "keywords": [],
     "author": "",
@@ -21,6 +22,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "pg": "^8.11.3",
         "uuid": "^9.0.1"
     }
