--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "pg": "^8.11.3",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0"
     }
 }
